fixed update,which causes horizontal scroll

--- a/src/app/chat/chat.scss
+++ b/src/app/chat/chat.scss
@@ -202,6 +202,7 @@
         position: absolute;
         height: 1px;
         width: 100%;
+        left: 0;
         bottom: 0;
         background: linear-gradient(
           90deg,
